--- a/project-static/squest/css/squest.css
+++ b/project-static/squest/css/squest.css
@@ -1,3 +1,6 @@
+footer{
+    z-index: auto !important;
+}
 .card-img-top {
     width: 100%;
     height: 10vw;
